--- a/src/assets/css/projects.css
+++ b/src/assets/css/projects.css
@@ -57,12 +57,16 @@
 /* New project page */
 .create-project-form-container{
     width: 100%;
-    display: flex;
-    margin-top: 10px;
+    margin-top: 40px;
 }
 
 .create-project-form{
-    width: 400px;
+    width: 500px;
+}
+
+#new-project-description{
+    margin-top: 10px;
+    font-size: 13px;
 }
 
 /* Project show page */
