--- a/src/assets/css/organizations.css
+++ b/src/assets/css/organizations.css
@@ -80,6 +80,12 @@
     padding-left: 5px
 }
 
+.create-org-form ul{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 li[id^='new-org-description']{
     margin-top: 5px;
     font-size: 13px;
