added sub tier to org index page

--- a/src/views/organizations/index.pug
+++ b/src/views/organizations/index.pug
@@ -24,9 +24,9 @@ block subContent
                             div(class="organization")
                                 div(class="organization-top")
                                     p(class="organization-name clickable text-hover" hx-get=`/organizations/show/${organization.id}` hx-target=".page") #{organization.name}
-                                    p(class="organization-org") Membership Tier
+                                    p(class="organization-org") #{organization.subscriptions[0].subscriptionTier.name}
                                 
-                                p(class="organization-description") Filler description for organization - this should be number of members and projects
+                                p(class="organization-description soft-text") Filler description for organization - this should be number of members and projects
 
                             - if(i < organizations.length - 1)
                                 div(class="vertical-list-divider")
