--- a/src/views/organizations/new.pug
+++ b/src/views/organizations/new.pug
@@ -8,7 +8,11 @@ block subContent
         form(class="standard-form create-org-form" hx-post="/organizations/create" hx-target=".page")
             div(class="input-container")
                 p(class="form-label") Org Name
-                input.edit(class="secondary-shadow" type="text" name="name" value=name placeholder="Organization Name")
+                input.edit(class="secondary-shadow" type="text" name="name" value=name placeholder="Name")
+
+            div(class="input-container")
+                p(class="form-label") Org Description
+                input.edit(class="secondary-shadow" type="text" name="description" value=description placeholder="Description")
 
             div(class="dropdown-input-container")
                 p(class="form-label") Subscription Tier
