invitations index styling

--- a/src/views/layouts/lobby.pug
+++ b/src/views/layouts/lobby.pug
@@ -13,6 +13,6 @@ block content
                         li
                             p(class="clickable text-hover" hx-get="/organizations" hx-target=".page") Organizations
                         li
-                            p(class="clickable text-hover") Invitations
+                            p(class="clickable text-hover" hx-get="/invitations/sent" hx-target=".page") Invitations
 
                 block center
