--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -19,6 +19,7 @@ html(lang="en")
         
         link(rel="stylesheet" type="text/css" href="/css/projects.css")
         link(rel="stylesheet" type="text/css" href="/css/organizations.css")
+        link(rel="stylesheet" type="text/css" href="/css/invitations.css")
         link(rel="stylesheet" type="text/css" href="/css/pagination.css")
 
         script(src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js")
